--- a/pom.xml
+++ b/pom.xml
@@ -56,5 +56,17 @@
             <artifactId>jackson-core</artifactId>
             <version>2.14.2</version>
         </dependency>
+        <dependency>
+            <groupId>io.projectreactor.netty</groupId>
+            <artifactId>reactor-netty</artifactId>
+            <version>1.3.0-M1</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.ion</groupId>
+            <artifactId>ion-java</artifactId>
+            <version>1.0.2</version>
+        </dependency>
     </dependencies>
 </project>
+
+    
